--- a/CSDN-面试题/CSDN100道面试题/index.html
+++ b/CSDN-面试题/CSDN100道面试题/index.html
@@ -59,7 +59,7 @@
   <br>
   <a href="./26.数组去重.html">26.数组去重</a>
   <br>
-  <a href="./27.使用addEventListener点击li弹出内容(事件委托).html">27.使用addEventListener点击li弹出内容(事件委托)</a>
+  <a href="./27.使用addEventListener点击li弹出内容.html">27.使用addEventListener点击li弹出内容(事件委托)</a>
   <br>
   <a href="./28.判断两个对象相等.html">28.判断两个对象相等</a>
   <br>
