--- a/ES6-阮一峰-学习/2.变量的解构赋值.html
+++ b/ES6-阮一峰-学习/2.变量的解构赋值.html
@@ -61,12 +61,18 @@
       status: "ok",
       data: [342, 234]
     }
-    let {
+    var {
       id,
       status,
       data: [...num4]
     } = jsonData;
     console.log(id, status, num4);
+    var {
+      id,
+      status,
+      data
+    } = jsonData;
+    console.log(data);
 
   </script>
 </body>
