--- a/JavaScript-杂项/this 指向详细解析.html
+++ b/JavaScript-杂项/this 指向详细解析.html
@@ -93,7 +93,7 @@
     console.log(this);
   }
   // 直接调用构造函数
-  //C(); //指向window
+  C(); //指向window
   console.log(window.a); //37
   var c = new C(); //C
   console.log('console C')
