--- a/JavaScript-杂项/作用域.html
+++ b/JavaScript-杂项/作用域.html
@@ -16,14 +16,15 @@
   <div id="5">5clickme</div>
   <div id="6">6clickme</div>
   <script>
-    // function f(){
+    // function f1(){
     //   console.log(z);
     // }
     // function a(){
     //   var z=10;
-    //   f();
+    //   f1();
     // }
-    // a(); 会报错
+    // a(); //会报错 
+    // console.log(z) //会报错
     for (var i = 1; i <= 3; i++) {
       var btn = document.getElementById(i);
       btn.onclick = function () {
