--- a/JavaScript-杂项/水印生成-图片.html
+++ b/JavaScript-杂项/水印生成-图片.html
@@ -50,7 +50,7 @@
       window._picWM = _picWM;
     })();
     _picWM({
-      url: 'http://127.0.0.1:8080/原型链.jpg',
+      url: './原型链.jpg',
       content: 'QQMusicFE',
       cb: (base64Url) => {
         document.querySelector('img').src = base64Url
