--- a/正则表达式/2-正则表达式位置匹配攻略.html
+++ b/正则表达式/2-正则表达式位置匹配攻略.html
@@ -36,10 +36,10 @@
 
   console.log('(?=p) 和 (?!p)');
   // 正向先行断言和负向先行断言。
-  // (?=p) 就是 p 前面的那个位置。
-  // (?!l) 不是 p 前面的那个位置
-  // (?<=p) 就是 p 后面的那个位置。
-  // (?<!p) 不是 p 后面的那个位置。
+  // (?=p) 位置后面是p。
+  // (?!l) 位置后面不是p。
+  // (?<=p) 位置前面是p。
+  // (?<!p) 位置前面不是p。
   var result = "hello".replace(/(?=l)/g, '#');
   console.log(result);
   var result = "hello".replace(/(?!l)/g, '#');
